- Improved Games management page.   Now, admin is presented with the paginated list of all the games.   From there, he can add/delect/update/edit one, all or selected games. - Fixed vertical alignment issue in pagination items with Internet Explorer. - Added eBattles 32x32 icon. - Added poker and chess to the games list.

--- a/css/paginate.css
+++ b/css/paginate.css
@@ -1,4 +1,5 @@
 .paginate {
+padding: 3px 7px 3px 7px;
 }
 a.paginate {
 border: 1px solid #aaaaaa;
